mobile view nav overlap fix

--- a/public/style.css
+++ b/public/style.css
@@ -90,7 +90,7 @@ a {
 
 @media only screen and (max-width: 600px) {
   .navbar {
-    height: 10vh !important;
+    height: 15vh !important;
     padding-top: 40px !important;
   }
   .navbox{
